Implement endpoint to create loan amount request with error handling